--- a/freehelp-webchat/src/main/webapp/WEB-INF/view/index.html
+++ b/freehelp-webchat/src/main/webapp/WEB-INF/view/index.html
@@ -30,49 +30,20 @@
 </script>
 </head>
 <style>
-body {
- background-color: #131112; background-image: url(${request.contextPath}/resource/images/bg.jpg); background-size: cover; background-repeat: no-repeat;
-}
-
-.main {
- background: none
-}
-
-#header {
- background: none; border: none;
-}
-
-.login_input {
- text-align: center; margin: 20px auto;
-}
-
-.login_input input {
- width: 90%; line-height: 44px; height: 44px; background: rgba(0, 0, 0, 0.3) !important; filter: Alpha(opacity = 30); background: #000; border-radius: 33px; border: 1px solid #8B8786; color: #fff; font-size: 18px; text-indent: 22px;
-}
-
-.logo {
- text-align: center; margin: 40px auto;
-}
-
-.logo img {
- margin: 0 auto
-}
-
-a.btn_login {
- width: 90%; display: block; line-height: 44px; height: 44px; text-align: center; background: #FF6766; border-radius: 22px; margin: 30px auto 20px; color: #fff;
-}
-
-.btnline {
- position: absolute; bottom: 0; line-height: 44px; height: 44px; width: 100%
-}
-
-.btnline a {
- color: #fff;
-}
+body { background-color:#131112; background-image:url(${request.contextPath}/resource/images/bg.jpg); background-size:cover; background-repeat:no-repeat;}
+.main { background:none; height:100%; margin-top:-54px}
+#header { background:none; border:none;}
+.login_input { text-align:center; margin:20px auto; }
+.login_input input { width:90%;line-height:44px; height:44px; background:rgba(0, 0, 0, 0.3)!important; filter:Alpha(opacity=30); background:#000; border-radius:33px; border:1px solid #8B8786; color:#fff; font-size:18px; text-indent:16px;} 
+.logo { text-align:center; margin:60px auto 40px;}
+.logo img { margin:0 auto}
+a.btn_login { width:90%; display:block; line-height:44px; height:44px; text-align:center; background:#FF6766; border-radius:22px; margin:30px auto 20px; color:#fff; font-size:18px}
+.btnline { position:absolute; bottom:0; line-height:44px; height:44px; width:100%}
+.btnline a { color:#fff; background:none; margin-top:0}
 </style>
 <body>
 	<div id="header">
-		<a href="" class="l_ico ico_back2"></a>
+		<a href="" class="l_ico ico_back2" style="display: none;"></a>
 	</div>
 	<div class="main">
 		<form method="POST" id="f0">
@@ -88,9 +59,9 @@ a.btn_login {
 			<div>
 				<a href="javascript:void(0);" class="btn_login" id="submit">登 录</a>
 			</div>
-			<div class="btnline">
+			<div class="btnline_1">
 				<span class="fl ml20">
-					<a href="../changpassword/changpassword.html">忘记密码了？</a>
+					<a href="${request.contextPath}/resource/changpassword/changpassword.html">忘记密码了？</a>
 				</span>
 				<span class="fr mr20">
 					<a href="${request.contextPath}/register/reg_1">新用户注册</a>
