--- a/freehelp-webchat/src/main/webapp/WEB-INF/view/register/reg_1.html
+++ b/freehelp-webchat/src/main/webapp/WEB-INF/view/register/reg_1.html
@@ -43,7 +43,7 @@
 
 <body>
 	<div id="header">
-		<a href="login.html" class="l_ico ico_back"></a>
+		<a href="${request.contextPath}/" class="l_ico ico_back"></a>
 		<span class="m_text">注册</span>
 	</div>
 	<div class="main">
