--- a/freehelp-webchat/src/main/webapp/WEB-INF/view/system/index.html
+++ b/freehelp-webchat/src/main/webapp/WEB-INF/view/system/index.html
@@ -35,7 +35,7 @@
 
 <body>
 	<div id="header">
-		<a href="javascript:void(0);" class="l_ico ico_user"></a>
+		<a href="${request.contextPath}/system/userInfo/userCenter_1" class="l_ico ico_user"></a>
 		<span class="m_text">
 			<img src="${request.contextPath}/resource/images/logo_head.jpg" height="40" />
 		</span>
@@ -162,7 +162,7 @@
 		<div class="bottombtn">
 			<div class="p15">
 				<div class="midbtn">
-					<a href="">管理丰源</a>
+					<a href="${request.contextPath}/system/houseInfo/houseManage_2">管理丰源</a>
 				</div>
 			</div>
 		</div>
