--- a/freehelp-webchat/src/main/webapp/WEB-INF/view/error.html
+++ b/freehelp-webchat/src/main/webapp/WEB-INF/view/error.html
@@ -1,4 +1,25 @@
 <html>
+<head>
+<script type="text/javascript">
+	function brithdayDay(idCard) {
+		alert(/(^[1-9]\d{7}((0\d)|(1[0-2]))(([0|1|2]\d)|3[0-1])\d{3}$)|(^[1-9]\d{5}[1-9]\d{3}((0\d)|(1[0-2]))(([0|1|2]\d)|3[0-1])\d{3}([0-9]|X)$)/.test(idCard));
+		if (idCard.length == 18)
+			idCard = idCard.substring(6, 14);
+		else
+			idcard = 19 + idCard.substring(6, 12);
+		var x = [ 0, 4, 4, 6, 6, 8 ];
+		var result = '';
+		for (var i = 0; i < x.length; i++) {
+			result += idCard.substring(x[i], x[++i]);
+			if (x[i] != x[x.length - 1])
+				result += '-';
+		}
+		return result;
+	}
+	alert(1);
+	alert(brithdayDay('440181198412233938'));
+</script>
+</head>
 <body>
 	<h2>error</h2>
 </body>
